# hebi_description

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: A-2582-07.cfg.yaml  A-2582-07G.cfg.yaml  mobile_io.cfg.yaml
config/gains/: A-2240-05.xml  A-2240-06_gains.xml
config/hrdf/: A-2085-05.hrdf
config/layouts/: default.json
hrdf/: 6-DoF_arm.hrdf  A-2084-01.hrdf  A-2085-06-parallel-gripper.hrdf  A-2240-05.hrdf  a-2084-01-parallel-gripper.hrdf  a-2085-04-parallel-gripper.hrdf  a-2085-05-parallel-gripper.hrdf  a-2085-06-harallel-gripper.hrdf  a-2085-06-parallel-gripper.hrdf
launch/: view_A-2085-06.launch.py  view_arm.launch.py
meshes/: A-2038-02.stl  A-2039-02.stl  A-2121-01_Export.mtl  A-2226-01.stl  T5.stl  T8.stl  omnibase_wheel.mtl
models/A-2084-01/: A-2084-01.sdf
models/A-2084-01-parallel-gripper/: A-2084-01-parallel-gripper.sdf
models/A-2085-04/: A-2085-04.sdf
models/A-2085-04-parallel-gripper/: A-2085-04-parallel-gripper.sdf
models/A-2085-05/: A-2085-05.sdf
models/A-2085-05-parallel-gripper/: A-2085-05-parallel-gripper.sdf
models/A-2085-06-parallel-gripper/: A-2085-06-parallel-gripper.sdf
rviz/: hebi_arm.rviz
scripts/: generate_pipeline.bash  generate_pipeline_batch.bash  generate_urdf.sh  generate_urdf_from_configs.bash  hrdf_convert  urdf_generator.py
sdf/: A-2084-01.sdf  A-2085-04.sdf  A-2085-05.sdf  A-2085-06.sdf
tools/: generate_pipeline_batch_v1.bash  generate_pipeline_v1.bash  urdf_generator.py
urdf/: actuator.xacro  bracket.xacro  common.xacro  end_effector.xacro  hebi.xacro  link.xacro
(+146 files in other folders)
