<?xml version="1.0"?>
<package>
  <name>hebi_description</name>
  <version>0.1.0</version>
  <description>ROS models for HEBI components</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/hebi_description</url>
  <url type="repository">https://github.com/HebiRobotics/hebi_description.git</url>
  <url type="bugtracker">https://github.com/HebiRobotics/hebi_description/issues</url>

  <author email="sami@hebirobotics.com">Sami Mian</author>
  <author email="x@hebirobotics.com">Xavier Artache</author>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>transmission_interface</run_depend>

  <export>
  </export>
</package>
